--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
 
 		<!-- first section with social media-->
 		<div class="first">
-			<div class="content">
-				<div class="name">Yuan Xue</div>
-				<p class="introduction">
-					Developer + Engineer
-				</p>
+			<div class="content_container">
+				<div class="content">
+					<div class="name">Yuan Xue</div>
+					<p class="introduction">
+						Developer + Engineer
+					</p>
 
-				<!-- Social Bar -->
-				<ul class="social_bar">
-					<li><a href="https://github.com/yuanxue68" class="symbol" title="Github">circlegithubalt</a></li>
-					<li><a href="https://www.linkedin.com/in/yuanxue" class="symbol" title="LinkedIn">circlelinkedin</a></li>
-					<li><a id="popup" class="symbol" title="Contact Me" onclick="show_popup()">circleemail</a></li>
-					<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Yelp">circlequora</a></li>
-					<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
-				</ul>
-			</div>
+					<!-- Social Bar -->
+					<ul class="social_bar">
+						<li><a href="https://github.com/yuanxue68" class="symbol" title="Github">circlegithubalt</a></li>
+						<li><a href="https://www.linkedin.com/in/yuanxue" class="symbol" title="LinkedIn">circlelinkedin</a></li>
+						<li><a id="popup" class="symbol" title="Contact Me" onclick="show_popup()">circleemail</a></li>
+						<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Yelp">circlequora</a></li>
+						<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
+					</ul>
+				</div>
+			<div>
 			<!--
 			<hr>
 			<div id="popup_holder" onclick="check(event)">
