--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/vegas/jquery.vegas.min.js"></script>
 		<script type="text/javascript" src="js/background.js"></script>
+		<script type="text/javascript" src="js/index.js"></script>
 
 
 		<!-- first section with social media-->
@@ -40,24 +41,131 @@
 						<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
 					</ul>
 				</div>
-			<div>
-			<!--
-			<hr>
-			<div id="popup_holder" onclick="check(event)">
-				<div id="popup_contact_form">
-					<!--<img src="images/Close.png" id="close">
-					<form action="">
-						<h1>Say Hello</h1>
-						<hr>
-						<div class="error" id="form_error"></div>
-						<input type="text" id="name" name="name" placeholder="Name">
-						<input type="text" id="email" name="email" placeholder="Email">
-						<textarea name="message" id="message" placeholder="Message"></textarea>
-						<input id="send" type="submit" name="submit" value="Send Message">
-					</form>
-				</div>
 			</div>
-			-->
+			<span onclick="scrollToTimeline()" class="arrow"></span>
 		</div>
+
+		<div class="aboutme" id="aboutme">
+			<h2 class="title">About me<h2>
+		</div><!--
+
+	 --><div class="experience">
+			<h2 class="title">Experience<h2>
+			<div class ="expcontainer">
+				<ul>
+					<div class ="workplace">
+						<li>
+							<div class="companyicon">
+								<div class="square">
+									<img src="images/TD.jpg" class="icon">
+								</div>
+							</div>
+							<div class="descriptionarea">
+								<div class="titlearea">
+									<span class="jobtitle">
+										Solution Developer, Toronto Dominion Bank
+									</span>
+									<span class="time">
+										July, 2015
+									</span>
+								</div>
+								<div class="description">
+									<ul>
+										<li>
+											I will be joining Toronto Dominion Bank as a solution developer in July 2015
+										</li>
+									</ul>
+								</div>
+							</div>
+						</li>
+					</div>
+					<div class ="workplace">
+						<li>
+							<div class="companyicon">
+								<div class="square">
+									<img src="images/IBM.jpg" class="icon">
+								</div>
+							</div>
+							<div class="descriptionarea">
+								<div class="titlearea">
+									<span class="jobtitle">
+										Software Engineer Intern, IBM 
+									</span>
+									<span class="time">
+										May,13 - Aug,14
+									</span>
+								</div>
+								<div class="description">
+									<ul>
+										<li>
+											Increased usage rate of a web application used to facilitate the creation of interim fixes by 40% through improving user interface and implementing new features ( JEE, Java, JavaScript )
+										</li>
+										<br>
+										<li>
+											Designed and implemented critical new application used to create work tasks for software developers when customers report new WebSphere defects ( Java )
+										</li>
+										<br>
+										<li>
+											Developed in a Java API used to communicate with multiple data repositories, thus providing an easy mean to retrieve information programmatically ( Java )
+										</li>
+										<br>
+										<li>
+											Created a set of HTML report generating tool used to track errors, distributions and assignments of defects in different WebSphere components ( Java, XSLT, XML )
+										</li>
+									</ul>
+								</div>
+							</div>
+						</li>
+					</div>
+					<div class ="workplace">
+						<li>
+							<div class="companyicon">
+								<div class="square">
+									<img src="images/SKULE.jpg" class="icon">
+								</div>
+							</div>
+							<div class="descriptionarea">
+								<div class="titlearea">
+									<span class="jobtitle">
+										Web Developer, Skule™ Labs
+									</span>
+									<span class="time">
+										Mar,14 - Jun,14
+									</span>
+								</div>
+								<div class="description">
+									<ul>
+										<li>
+											Developed in a web platform designed to improve student life by harvesting university related information and services to a centralized site ( Ruby on Rails )
+										</li>
+										<br>
+										<li>
+											Improved front end view ( CSS )
+										</li>
+										<br>
+										<li>
+											Performed data retrieval and extraction ( SQL )
+										</li>
+									</ul>
+								</div>
+							</div>
+						</li>
+					</div>
+				</ul>
+
+			</div>
+		</div>
+
+		<div class="footer">
+			<ul class="social_bar">
+				<li><a href="https://github.com/yuanxue68" class="symbol" title="Github">circlegithubalt</a></li>
+				<li><a href="https://www.linkedin.com/in/yuanxue" class="symbol" title="LinkedIn">circlelinkedin</a></li>
+				<li><a id="popup" class="symbol" title="Contact Me" onclick="show_popup()">circleemail</a></li>
+				<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Yelp">circlequora</a></li>
+				<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
+			</ul>
+		</div>
+
+	 <a href="#0" class="cd-top">Top</a>
 	</body>
 </html>
