experience section roughly finished

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="js/vegas/jquery.vegas.css"/>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Helvetica+Neue">
 	</head>
 	<body>
 		<!-- include js files -->
@@ -71,9 +73,7 @@
 								</div>
 								<div class="description">
 									<ul>
-										<li>
-											I will be joining Toronto Dominion Bank as a solution developer in July 2015
-										</li>
+										<li>I will be joining Toronto Dominion Bank as a solution developer in July 2015</li>
 									</ul>
 								</div>
 							</div>
@@ -97,20 +97,8 @@
 								</div>
 								<div class="description">
 									<ul>
-										<li>
-											Increased usage rate of a web application used to facilitate the creation of interim fixes by 40% through improving user interface and implementing new features ( JEE, Java, JavaScript )
-										</li>
-										<br>
-										<li>
-											Designed and implemented critical new application used to create work tasks for software developers when customers report new WebSphere defects ( Java )
-										</li>
-										<br>
-										<li>
-											Developed in a Java API used to communicate with multiple data repositories, thus providing an easy mean to retrieve information programmatically ( Java )
-										</li>
-										<br>
-										<li>
-											Created a set of HTML report generating tool used to track errors, distributions and assignments of defects in different WebSphere components ( Java, XSLT, XML )
+										<li>Increased usage rate of a web application used to facilitate the creation of interim fixes by 40%
+										 and created critical new application used to create work tasks for software developers when customers report new WebSphere defects (Java, Javascript)
 										</li>
 									</ul>
 								</div>
@@ -135,17 +123,7 @@
 								</div>
 								<div class="description">
 									<ul>
-										<li>
-											Developed in a web platform designed to improve student life by harvesting university related information and services to a centralized site ( Ruby on Rails )
-										</li>
-										<br>
-										<li>
-											Improved front end view ( CSS )
-										</li>
-										<br>
-										<li>
-											Performed data retrieval and extraction ( SQL )
-										</li>
+										<li>Developed in a web platform designed to improve student life by harvesting university related information and services to a centralized site ( Ruby on Rails )</li>
 									</ul>
 								</div>
 							</div>
