about me roughly done

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<ul class="social_bar">
 						<li><a href="https://github.com/yuanxue68" class="symbol" title="Github">circlegithubalt</a></li>
 						<li><a href="https://www.linkedin.com/in/yuanxue" class="symbol" title="LinkedIn">circlelinkedin</a></li>
-						<li><a id="popup" class="symbol" title="Contact Me" onclick="show_popup()">circleemail</a></li>
+						<li><a href="mailto:yuanxue68@gmail.com?subject=Hello!" id="popup" class="symbol" title="Contact Me" onclick="show_popup()">circleemail</a></li>
 						<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Yelp">circlequora</a></li>
 						<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
 					</ul>
@@ -48,7 +48,17 @@
 		</div>
 
 		<div class="aboutme" id="aboutme">
-			<h2 class="title">About me<h2>
+			<h2 class="title">About me</h2>
+			<div class="aboutmecontainer">
+				<div>
+					<img src="images/yuanxue.jpg" class="avatar">
+				</div>
+				<div class="bio">
+					Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
+					I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
+					working out, chill out with friends and eating great food.
+				</div>
+			</div>
 		</div><!--
 
 	 --><div class="experience">
@@ -97,8 +107,8 @@
 								</div>
 								<div class="description">
 									<ul>
-										<li>Increased usage rate of a web application used to facilitate the creation of interim fixes by 40%
-										 and created critical new application used to create work tasks for software developers when customers report new WebSphere defects (Java, Javascript)
+										<li>Increased usage rate of a JEE web application used to facilitate the creation of interim fixes by 40%
+										 and created critical new application used to create work tasks for software developers when customers report new WebSphere defects ( Java, Javascript )
 										</li>
 									</ul>
 								</div>
