--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						<li><a href="https://github.com/yuanxue68" class="symbol" title="Github">circlegithubalt</a></li>
 						<li><a href="https://www.linkedin.com/in/yuanxue" class="symbol" title="LinkedIn">circlelinkedin</a></li>
 						<li><a href="mailto:yuanxue68@gmail.com?subject=Hello!" id="popup" class="symbol" title="Contact Me" onclick="show_popup()">circleemail</a></li>
-						<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Yelp">circlequora</a></li>
-						<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
+						<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Quora">circlequora</a></li>
+						<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Pinterest">circlepinterest</a></li>
 					</ul>
 				</div>
 			</div>
