made page screw up less when changing window size

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 				<div>
 					<img src="images/yuanxue.jpg" class="avatar">
 				</div>
-				<div class="bio">
+				<p class="bio">
 					Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
 					I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
 					working out, chill out with friends and eating great food.
-				</div>
+				</p>
 			</div>
 		</div><!--
 
