--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								</div>
 								<div class="description">
 									<ul>
-										<li>I will be joining Toronto Dominion Bank as a solution developer in July 2015</li>
+										<li>I will be joining Toronto Dominion Bank as a solution developer in the up coming July in 2015</li>
 									</ul>
 								</div>
 							</div>
