--- a/index.html
+++ b/index.html
@@ -144,6 +144,47 @@
 			</div>
 		</div>
 
+		<div class="projects">
+			<h2 class="title">Projects</h2>
+			<div class="projectscontainer">
+				<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
+					<img src="images/facial_recognition.jpg" class="projectpic">
+					<span class="caption">
+						<p>Facial Recognition</p>
+						<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
+					</span>
+				</a>
+				<a class="project">
+					<img src="images/comingsoon.jpg" class="projectpic">
+					<span class="caption">
+						<p>Maze War</p>
+						<p>decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
+					</span>
+				</a>
+				<a class="project" href="https://github.com/yuanxue68/OS161">
+					<img src="images/OS.jpg" class="projectpic">
+					<span class="caption">
+						<p>OS161 Operating System</p>
+						<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
+					</span>
+				</a>
+				<a class="project">
+					<img src="images/comingsoon.jpg" class="projectpic">
+					<span class="caption">
+						<p>TubeWall</p>
+						<p>A webpage that allows users to watch multiple YouTube videos simultaneously (JavaScript, CSS)</p>
+					</span>
+				</a>
+				<a class="project">
+					<img src="images/comingsoon.jpg" class="projectpic">
+					<span class="caption">
+						<p>OmniFeeds</p>
+						<p>Allows user to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
+					</span>
+				</a>
+			</div>
+		</div>
+
 		<div class="footer">
 			<ul class="social_bar">
 				<li><a href="https://github.com/yuanxue68" class="symbol" title="Github">circlegithubalt</a></li>
