--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			<h2 class="title">Projects</h2>
 			<div class="projectscontainer">
 				<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
-					<img src="images/Facial_recognition.jpg" class="projectpic">
+					<img src="images/facial.jpg" class="projectpic">
 					<span class="caption">
 						<p>Facial Recognition</p>
 						<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
