--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="css/animate.min.css"/>
         <link rel="stylesheet" type="text/css" href="js/vegas/jquery.vegas.css"/>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
@@ -21,6 +22,7 @@
 		<!-- include js files -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/vegas/jquery.vegas.min.js"></script>
+		<script type="text/javascript" src="js/jquery.viewportchecker.js"></script>
 		<script type="text/javascript" src="js/background.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 
@@ -48,140 +50,145 @@
 		</div>
 
 		<div class="aboutme" id="aboutme">
-			<h2 class="title">About me</h2>
-			<div class="aboutmecontainer">
-				<div>
-					<img src="images/yuanxue.jpg" class="avatar">
-				</div>
-				<p class="bio">
-					Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
-					I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
-					working out, chill out with friends and eating great food.
-				</p>
+			<div class="introanimation">
+				<h2 class="title">About me</h2>
+				<div class="aboutmecontainer">
+					<div>
+						<img src="images/yuanxue.jpg" class="avatar">
+					</div>
+					<p class="bio">
+						Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
+						I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
+						working out, chill out with friends and eating great food.
+					</p>
+			</div>
 			</div>
 		</div><!--
 
 	 --><div class="experience">
-			<h2 class="title">Experience<h2>
-			<div class ="expcontainer">
-				<ul>
-					<div class ="workplace">
-						<li>
-							<div class="companyicon">
-								<div class="square">
-									<img src="images/TD.jpg" class="icon">
+	 		<div class="introanimation">
+				<h2 class="title">Experience</h2>
+				<div class ="expcontainer">
+					<ul>
+						<div class ="workplace">
+							<li>
+								<div class="companyicon">
+									<div class="square">
+										<img src="images/TD.jpg" class="icon">
+									</div>
 								</div>
-							</div>
-							<div class="descriptionarea">
-								<div class="titlearea">
-									<span class="jobtitle">
-										Solution Developer, Toronto Dominion Bank
-									</span>
-									<span class="time">
-										July, 2015
-									</span>
+								<div class="descriptionarea">
+									<div class="titlearea">
+										<span class="jobtitle">
+											Solution Developer, Toronto Dominion Bank
+										</span>
+										<span class="time">
+											July, 2015
+										</span>
+									</div>
+									<div class="description">
+										<ul>
+											<li>I will be joining Toronto Dominion Bank as a solution developer in the up coming July in 2015</li>
+										</ul>
+									</div>
 								</div>
-								<div class="description">
-									<ul>
-										<li>I will be joining Toronto Dominion Bank as a solution developer in the up coming July in 2015</li>
-									</ul>
+							</li>
+						</div>
+						<div class ="workplace">
+							<li>
+								<div class="companyicon">
+									<div class="square">
+										<img src="images/IBM.jpg" class="icon">
+									</div>
 								</div>
-							</div>
-						</li>
-					</div>
-					<div class ="workplace">
-						<li>
-							<div class="companyicon">
-								<div class="square">
-									<img src="images/IBM.jpg" class="icon">
+								<div class="descriptionarea">
+									<div class="titlearea">
+										<span class="jobtitle">
+											Software Engineer Intern, IBM 
+										</span>
+										<span class="time">
+											May,13 - Aug,14
+										</span>
+									</div>
+									<div class="description">
+										<ul>
+											<li>Increased usage rate of a JEE web application used to facilitate the creation of interim fixes by 40%
+											 and created critical new application used to create work tasks for software developers when customers report new WebSphere defects ( Java, Javascript )
+											</li>
+										</ul>
+									</div>
 								</div>
-							</div>
-							<div class="descriptionarea">
-								<div class="titlearea">
-									<span class="jobtitle">
-										Software Engineer Intern, IBM 
-									</span>
-									<span class="time">
-										May,13 - Aug,14
-									</span>
+							</li>
+						</div>
+						<div class ="workplace">
+							<li>
+								<div class="companyicon">
+									<div class="square">
+										<img src="images/SKULE.jpg" class="icon">
+									</div>
 								</div>
-								<div class="description">
-									<ul>
-										<li>Increased usage rate of a JEE web application used to facilitate the creation of interim fixes by 40%
-										 and created critical new application used to create work tasks for software developers when customers report new WebSphere defects ( Java, Javascript )
-										</li>
-									</ul>
+								<div class="descriptionarea">
+									<div class="titlearea">
+										<span class="jobtitle">
+											Web Developer, Skule™ Labs
+										</span>
+										<span class="time">
+											Mar,14 - Jun,14
+										</span>
+									</div>
+									<div class="description">
+										<ul>
+											<li>Developed in a web platform designed to improve student life by harvesting university related information and services to a centralized site ( Ruby on Rails )</li>
+										</ul>
+									</div>
 								</div>
-							</div>
-						</li>
-					</div>
-					<div class ="workplace">
-						<li>
-							<div class="companyicon">
-								<div class="square">
-									<img src="images/SKULE.jpg" class="icon">
-								</div>
-							</div>
-							<div class="descriptionarea">
-								<div class="titlearea">
-									<span class="jobtitle">
-										Web Developer, Skule™ Labs
-									</span>
-									<span class="time">
-										Mar,14 - Jun,14
-									</span>
-								</div>
-								<div class="description">
-									<ul>
-										<li>Developed in a web platform designed to improve student life by harvesting university related information and services to a centralized site ( Ruby on Rails )</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-					</div>
-				</ul>
-
+							</li>
+						</div>
+					</ul>
+				</div>
 			</div>
 		</div>
 
 		<div class="projects">
-			<h2 class="title">Projects</h2>
-			<div class="projectscontainer">
-				<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
-					<img src="images/facial.jpg" class="projectpic">
-					<span class="caption">
-						<p>Facial Recognition</p>
-						<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
-					</span>
-				</a>
-				<a class="project">
-					<img src="images/comingsoon.jpg" class="projectpic">
-					<span class="caption">
-						<p>Maze War</p>
-						<p>Decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
-					</span>
-				</a>
-				<a class="project" href="https://github.com/yuanxue68/OS161">
-					<img src="images/OS.jpg" class="projectpic">
-					<span class="caption">
-						<p>OS161 Operating System</p>
-						<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
-					</span>
-				</a>
-				<a class="project">
-					<img src="images/comingsoon.jpg" class="projectpic">
-					<span class="caption">
-						<p>TubeWall</p>
-						<p>A webpage that allows users to watch multiple YouTube videos simultaneously (JavaScript, CSS)</p>
-					</span>
-				</a>
-				<a class="project">
-					<img src="images/comingsoon.jpg" class="projectpic">
-					<span class="caption">
-						<p>OmniFeeds</p>
-						<p>Allows user to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
-					</span>
-				</a>
+			<div class="introanimation">
+				<h2 class="title">Projects</h2>
+				<div class="projectscontainer">
+					<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
+						<img src="images/facial.jpg" class="projectpic">
+						<span class="caption">
+							<p>Facial Recognition</p>
+							<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
+						</span>
+					</a>
+					<a class="project">
+						<img src="images/comingsoon.jpg" class="projectpic">
+						<span class="caption">
+							<p>Maze War</p>
+							<p>Decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
+						</span>
+					</a>
+					<a class="project" href="https://github.com/yuanxue68/OS161">
+						<img src="images/OS.jpg" class="projectpic">
+						<span class="caption">
+							<p>OS161 Operating System</p>
+							<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
+						</span>
+					</a>
+					<a class="project">
+						<img src="images/comingsoon.jpg" class="projectpic">
+						<span class="caption">
+							<p>TubeWall</p>
+							<p>A webpage that allows users to watch multiple YouTube videos simultaneously (JavaScript, CSS)</p>
+						</span>
+					</a>
+					<a class="project">
+						<img src="images/comingsoon.jpg" class="projectpic">
+						<span class="caption">
+							<p>OmniFeeds</p>
+							<p>Allows user to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
+						</span>
+					</a>
+				</div>
 			</div>
 		</div>
 
