--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 				<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Yelp">circlequora</a></li>
 				<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
 			</ul>
+			<p class="closingtext">Made in Toronto :D</p>
 		</div>
 
 	 <a href="#0" class="cd-top">Top</a>
