--- a/index.html
+++ b/index.html
@@ -199,9 +199,17 @@
 				<li><a href="http://www.quora.com/Yuan-Xue-10" class="symbol" title="Yelp">circlequora</a></li>
 				<li><a href="https://www.pinterest.com/yuanxue961" class="symbol" title="Yelp">circlepinterest</a></li>
 			</ul>
-			<p class="closingtext">Made in Toronto :D</p>
+			<p class="closingtext">Made in Canada :D</p>
 		</div>
 
 	 <a href="#0" class="cd-top">Top</a>
+	 <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-60795400-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 	</body>
 </html>
