--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</head>
 	<body>
 		<!-- include js files -->
+		<script async="" src="//www.google-analytics.com/analytics.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/vegas/jquery.vegas.min.js"></script>
 		<script type="text/javascript" src="js/jquery.viewportchecker.js"></script>
