--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@
 							<p>Allows user to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
 						</span>
 					</a>
+					<a class="project">
+						<img src="images/comingsoon.jpg" class="projectpic">
+						<span class="caption">
+							<p class="ptitle">ROR Blog</p>
+							<p>Blog site made for practice and giggles (Ruby on Rails)</p>
+						</span>
+					</a>
 				</div>
 			</div>
 		</div>
