--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OmniFeeds</p>
-							<p>Allows user to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
+							<p>Allow users to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
 						</span>
 					</a>
 					<a class="project">
