--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 
 		<div class="aboutme" id="aboutme">
-			<div class="introanimation">
+			<div class="introup">
 				<h2 class="title">About me</h2>
 				<div class="aboutmecontainer">
 					<div>
@@ -66,11 +66,11 @@
 		</div><!--
 
 	 --><div class="experience">
-	 		<div class="introanimation">
-				<h2 class="title">Experience</h2>
+	 		<div>
+				<h2 class="title introup">Experience</h2>
 				<div class ="expcontainer">
 					<ul>
-						<div class ="workplace">
+						<div class ="workplace introleft">
 							<li>
 								<div class="companyicon">
 									<div class="square">
@@ -94,7 +94,7 @@
 								</div>
 							</li>
 						</div>
-						<div class ="workplace">
+						<div class ="workplace introright">
 							<li>
 								<div class="companyicon">
 									<div class="square">
@@ -120,7 +120,7 @@
 								</div>
 							</li>
 						</div>
-						<div class ="workplace">
+						<div class ="workplace introleft">
 							<li>
 								<div class="companyicon">
 									<div class="square">
@@ -150,45 +150,45 @@
 		</div>
 
 		<div class="projects">
-			<div class="introanimation">
-				<h2 class="title">Projects</h2>
+			<div>
+				<h2 class="title introup">Projects</h2>
 				<div class="projectscontainer">
-					<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
+					<a class="project introleft" href="https://github.com/yuanxue68/Facial-Recognition">
 						<img src="images/facial.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Facial Recognition</p>
 							<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introleft">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Maze War</p>
 							<p>Decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
 						</span>
 					</a>
-					<a class="project" href="https://github.com/yuanxue68/OS161">
+					<a class="project introright" href="https://github.com/yuanxue68/OS161">
 						<img src="images/OS.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OS161 Operating System</p>
 							<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introleft">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">TubeWall</p>
 							<p>A webpage that allows users to watch multiple YouTube videos simultaneously (JavaScript, CSS)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introright">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OmniFeeds</p>
 							<p>Allow users to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introright">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">ROR Blog</p>
