--- a/index.html
+++ b/index.html
@@ -50,18 +50,16 @@
 		</div>
 
 		<div class="aboutme" id="aboutme">
-			<div class="introup">
-				<h2 class="title">About me</h2>
-				<div class="aboutmecontainer">
-					<div>
-						<img src="images/yuanxue.jpg" class="avatar">
-					</div>
-					<p class="bio">
-						Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
-						I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
-						working out, chill out with friends and eating great food.
-					</p>
-			</div>
+			<h2 class="title introup">About me</h2>
+			<div class="aboutmecontainer">
+				<div class="introfade">
+					<img src="images/yuanxue.jpg" class="avatar">
+				</div>
+				<p class="bio introup">
+					Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
+					I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
+					working out, chill out with friends and eating great food.
+				</p>
 			</div>
 		</div><!--
 
