changed to fade animation

--- a/index.html
+++ b/index.html
@@ -150,43 +150,43 @@
 		<div class="projects">
 			<div>
 				<h2 class="title introup">Projects</h2>
-				<div class="projectscontainer">
-					<a class="project introleft" href="https://github.com/yuanxue68/Facial-Recognition">
+				<div class="projectscontainer introfade">
+					<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
 						<img src="images/facial.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Facial Recognition</p>
 							<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
 						</span>
 					</a>
-					<a class="project introleft">
+					<a class="project">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Maze War</p>
 							<p>Decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
 						</span>
 					</a>
-					<a class="project introright" href="https://github.com/yuanxue68/OS161">
+					<a class="project" href="https://github.com/yuanxue68/OS161">
 						<img src="images/OS.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OS161 Operating System</p>
 							<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
 						</span>
 					</a>
-					<a class="project introleft">
+					<a class="project">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">TubeWall</p>
 							<p>A webpage that allows users to watch multiple YouTube videos simultaneously (JavaScript, CSS)</p>
 						</span>
 					</a>
-					<a class="project introright">
+					<a class="project">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OmniFeeds</p>
 							<p>Allow users to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
 						</span>
 					</a>
-					<a class="project introright">
+					<a class="project">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">ROR Blog</p>
