--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 		</div>
 
 		<div class="aboutme" id="aboutme">
-			<h2 class="title introup">About me</h2>
+			<h2 class="title introfade">About me</h2>
 			<div class="aboutmecontainer">
 				<div class="introfade">
 					<img src="images/yuanxue.jpg" class="avatar">
 				</div>
-				<p class="bio introup">
+				<p class="bio introfade">
 					Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
 					I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
 					working out, chill out with friends and eating great food.
@@ -65,10 +65,10 @@
 
 	 --><div class="experience">
 	 		<div>
-				<h2 class="title introup">Experience</h2>
+				<h2 class="title introfade">Experience</h2>
 				<div class ="expcontainer">
 					<ul>
-						<div class ="workplace introleft">
+						<div class ="workplace introfade">
 							<li>
 								<div class="companyicon">
 									<div class="square">
@@ -92,7 +92,7 @@
 								</div>
 							</li>
 						</div>
-						<div class ="workplace introright">
+						<div class ="workplace introfade">
 							<li>
 								<div class="companyicon">
 									<div class="square">
@@ -118,7 +118,7 @@
 								</div>
 							</li>
 						</div>
-						<div class ="workplace introleft">
+						<div class ="workplace introfade">
 							<li>
 								<div class="companyicon">
 									<div class="square">
@@ -149,7 +149,7 @@
 
 		<div class="projects">
 			<div>
-				<h2 class="title introup">Projects</h2>
+				<h2 class="title introfade">Projects</h2>
 				<div class="projectscontainer introfade">
 					<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
 						<img src="images/facial.jpg" class="projectpic">
