--- a/index.html
+++ b/index.html
@@ -149,44 +149,44 @@
 
 		<div class="projects">
 			<div>
-				<h2 class="title introfade">Projects</h2>
+				<h2 class="title">Projects</h2>
 				<div class="projectscontainer introfade">
-					<a class="project" href="https://github.com/yuanxue68/Facial-Recognition">
+					<a class="project introfade" href="https://github.com/yuanxue68/Facial-Recognition">
 						<img src="images/facial.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Facial Recognition</p>
 							<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introfade">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Maze War</p>
 							<p>Decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
 						</span>
 					</a>
-					<a class="project" href="https://github.com/yuanxue68/OS161">
+					<a class="project introfade" href="https://github.com/yuanxue68/OS161">
 						<img src="images/OS.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OS161 Operating System</p>
 							<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introfade">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">TubeWall</p>
 							<p>A webpage that allows users to watch multiple YouTube videos simultaneously (JavaScript, CSS)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introfade">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OmniFeeds</p>
 							<p>Allow users to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
 						</span>
 					</a>
-					<a class="project">
+					<a class="project introfade">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">ROR Blog</p>
