remove 100vh if mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 		<!-- first section with social media-->
-		<div class="first">
+		<div class="first fullscreenheight">
 			<div class="content_container">
 				<div class="content">
 					<div class="name">Yuan Xue</div>
