--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</ul>
 				</div>
 			</div>
-			<span onclick="scrollToTimeline()" class="arrow"></span>
+			<span onclick="scrollToTimeline()" class="arrow hidethis"></span>
 		</div>
 
 		<div class="aboutme" id="aboutme">
