add mazewar pic

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						</span>
 					</a>
 					<a class="project introfade">
-						<img src="images/comingsoon.jpg" class="projectpic">
+						<img src="images/maze.jpg" href="https://github.com/yuanxue68/MazeWar" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Maze War</p>
 							<p>Decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
