add mazewar pic

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 							<p>Android application that labels recognized face with name and realtionship (Java, Android)</p>
 						</span>
 					</a>
-					<a class="project introfade">
-						<img src="images/maze.jpg" href="https://github.com/yuanxue68/MazeWar" class="projectpic">
+					<a class="project introfade" href="https://github.com/yuanxue68/MazeWar">
+						<img src="images/maze.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Maze War</p>
 							<p>Decentralized multiplayer maze game with synchronization and no single point of failure (Java)</p>
