make title font smaller if mobile

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div>
 
 		<div class="aboutme" id="aboutme">
-			<h2 class="title introfade">About me</h2>
+			<h2 class="title introfade smalltitle">About me</h2>
 			<div class="aboutmecontainer">
 				<div class="introfade">
 					<img src="images/yuanxue.jpg" class="avatar">
@@ -64,7 +64,7 @@
 
 	 --><div class="experience">
 	 		<div>
-				<h2 class="title introfade">Experience</h2>
+				<h2 class="title introfade smalltitle">Experience</h2>
 				<div class ="expcontainer">
 					<ul>
 						<div class ="workplace introfade">
@@ -148,7 +148,7 @@
 
 		<div class="projects">
 			<div>
-				<h2 class="title">Projects</h2>
+				<h2 class="title smalltitle">Projects</h2>
 				<div class="projectscontainer introfade">
 					<a class="project introfade" href="https://github.com/yuanxue68/Facial-Recognition">
 						<img src="images/facial.jpg" class="projectpic">
