added a few more projects

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">OmniFeeds</p>
-							<p>Allow users to check Twitter, Facebook and Google plus feeds together (Ruby on Rails)</p>
+							<p>Allow users to check Twitter, Facebook and Google plus feeds together (JavaScript, CSS)</p>
 						</span>
 					</a>
 					<a class="project introfade">
@@ -190,6 +190,20 @@
 						<span class="caption">
 							<p class="ptitle">ROR Blog</p>
 							<p>Blog site made for practice and giggles (Ruby on Rails)</p>
+						</span>
+					</a>
+					<a class="project introfade">
+						<img src="images/comingsoon.jpg" class="projectpic">
+						<span class="caption">
+							<p class="ptitle">NBA Import</p>
+							<p>Imports NBA schedule into your google calendar (Ruby on Rails)</p>
+						</span>
+					</a>
+					<a class="project introfade">
+						<img src="images/comingsoon.jpg" class="projectpic">
+						<span class="caption">
+							<p class="ptitle">PitchVote</p>
+							<p>Collaborative voting site that updates on everyone's screen in real time (Node.js, Meteor.js)</p>
 						</span>
 					</a>
 				</div>
