--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">PitchVote</p>
-							<p>Collaborative voting site that updates on everyone's screen in real time (Node.js, Meteor.js)</p>
+							<p>Collaborative voting site that updates on everyone's screen in real time (Meteor.js)</p>
 						</span>
 					</a>
 				</div>
