added new project

--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@
 							<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
 						</span>
 					</a>
+					<a class="project introfade" href="https://github.com/yuanxue68/ProductHunt.real">
+						<img src="images/producthuntreal.jpg" class="projectpic">
+						<span class="caption">
+							<p class="ptitle">ProductHunt.Real</p>
+							<p>Forum based on ProductHunt that renders comments/upvotes/new posts in real time. (Meteor.js)</p>
+						</span>
+					</a>
 					<a class="project introfade">
 						<img src="images/comingsoon.jpg" class="projectpic">
 						<span class="caption">
@@ -190,13 +197,6 @@
 						<span class="caption">
 							<p class="ptitle">ROR Blog</p>
 							<p>Blog site made for practice and giggles (Ruby on Rails)</p>
-						</span>
-					</a>
-					<a class="project introfade">
-						<img src="images/comingsoon.jpg" class="projectpic">
-						<span class="caption">
-							<p class="ptitle">PitchVote</p>
-							<p>Collaborative voting site that updates on everyone's screen in real time (Meteor.js)</p>
 						</span>
 					</a>
 				</div>
