--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
 							<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
 						</span>
 					</a>
-					<a class="project introfade" href="https://github.com/yuanxue68/ProductHunt.real">
+					<a class="project introfade" href="https://github.com/yuanxue68/MiniProductHunt">
 						<img src="images/producthuntreal.jpg" class="projectpic">
 						<span class="caption">
-							<p class="ptitle">ProductHunt.Real</p>
-							<p>Forum based on ProductHunt that renders comments/upvotes/new posts in real time. (Meteor.js)</p>
+							<p class="ptitle">MiniProductHunt</p>
+							<p>Sites sharing forum that renders comments/upvotes/notifications in real time (Meteor.js)</p>
 						</span>
 					</a>
 					<a class="project introfade">
