edited some description

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						<img src="images/producthuntreal.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">MiniProductHunt</p>
-							<p>Sites sharing forum that renders comments/upvotes/notifications in real time (Meteor.js, MongoDB)</p>
+							<p>Site sharing forum that renders comments/upvotes/notifications in real time (Meteor.js, MongoDB)</p>
 						</span>
 					</a>
 					<a class="project introfade">
