--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							<p>Implemented core operating system functionality on Harvard’s OS/161 (C)</p>
 						</span>
 					</a>
-					<a class="project introfade" href="https://github.com/yuanxue68/MiniProductHunt">
+					<a class="project introfade" href="http://miniproducthunt.meteor.com/">
 						<img src="images/producthuntreal.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">MiniProductHunt</p>
