--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<p class="bio introfade">
 					Hello, my name is Yuan. I am a fourth year computer engineering student studying at the University of Toronto. 
 					I have a passion for buiding useful and not so useful (but fun!) applications with programming. I also enjoy 
-					working out, chill out with friends and eating great food.
+					working out, chilling out with friends and eating great food.
 				</p>
 			</div>
 		</div><!--
