--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <link rel="stylesheet" type="text/css" href="js/vegas/jquery.vegas.css"/>
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
-	</head>
-	<body>
-		<!-- include js files -->
+        		<!-- include js files -->
 		<script async="" src="//www.google-analytics.com/analytics.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/vegas/jquery.vegas.min.js"></script>
 		<script type="text/javascript" src="js/jquery.viewportchecker.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
+	</head>
+	<body>
+
 
 
 		<!-- first section with social media-->
@@ -47,7 +48,7 @@
 			</div>
 			<span onclick="scrollToTimeline()" class="arrow hidethis"></span>
 		</div>
-
+		<!-- start about me section -->
 		<div class="aboutme" id="aboutme">
 			<h2 class="title introfade smalltitle">About me</h2>
 			<div class="aboutmecontainer">
@@ -60,9 +61,9 @@
 					working out, chilling out with friends and eating great food.
 				</p>
 			</div>
-		</div><!--
-
-	 --><div class="experience">
+		</div>
+		<!-- start experience section -->
+	 	<div class="experience">
 	 		<div>
 				<h2 class="title introfade smalltitle">Experience</h2>
 				<div class ="expcontainer">
@@ -145,7 +146,7 @@
 				</div>
 			</div>
 		</div>
-
+		<!-- start projects section -->
 		<div class="projects">
 			<div>
 				<h2 class="title smalltitle">Projects</h2>
@@ -179,23 +180,16 @@
 						</span>
 					</a>
 					<a class="project introfade">
-						<img src="images/comingsoon.jpg" class="projectpic">
+						<img src="images/password.jpg" class="projectpic">
 						<span class="caption">
-							<p class="ptitle">TubeWall</p>
-							<p>A webpage that allows users to watch multiple YouTube videos simultaneously (JavaScript, CSS)</p>
-						</span>
-					</a>
-					<a class="project introfade">
-						<img src="images/comingsoon.jpg" class="projectpic">
-						<span class="caption">
-							<p class="ptitle">OmniFeeds</p>
-							<p>Allow users to check Twitter, Facebook and Google plus feeds together (JavaScript, CSS)</p>
+							<p class="ptitle">Password Cracker</p>
+							<p>Created a multithreaded password cracker with Apache Zookeeper (Java)</p>
 						</span>
 					</a>
 				</div>
 			</div>
 		</div>
-
+		<!-- start footer section -->
 		<div class="footer">
 			<ul class="social_bar">
 				<li><a href="https://github.com/yuanxue68" class="symbol" title="Github">circlegithubalt</a></li>
