--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						<img src="images/password.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Password Cracker</p>
-							<p>Created a multithreaded password cracker with Apache Zookeeper (Java)</p>
+							<p>A multithreaded password cracker with Apache Zookeeper (Java)</p>
 						</span>
 					</a>
 				</div>
