--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 							<p>Site sharing forum that renders comments/upvotes/notifications in real time (Meteor.js, MongoDB)</p>
 						</span>
 					</a>
-					<a class="project introfade">
+					<a class="project introfade" href="https://github.com/yuanxue68/Password-Cracker">
 						<img src="images/password.jpg" class="projectpic">
 						<span class="caption">
 							<p class="ptitle">Password Cracker</p>
