--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="content">
 					<div class="name">Yuan Xue</div>
 					<p class="introduction">
-						Developer + Engineer
+						Computer Engineer
 					</p>
 
 					<!-- Social Bar -->
