removed one unused div

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 		<div class="content_container">
 			<div class="content">
 				<div class="name">Yuan Xue</div>
-				<p class="introduction">
-					Computer Engineer
-				</p>
+				<p class="introduction">Computer Engineer</p>
 
 				<!-- Social Bar -->
 				<ul class="social_bar">
@@ -62,80 +60,79 @@
 			<h2 class="title introfade smalltitle">Experience</h2>
 			<div class ="expcontainer">
 				<ul>
-					<div class ="workplace introfade">
-						<li>
-							<div class="companyicon">
-								<div class="square">
-									<img src="images/TD.jpg" class="icon">
-								</div>
+
+					<li  class ="workplace introfade">
+						<div class="companyicon">
+							<div class="square">
+								<img src="images/TD.jpg" class="icon">
 							</div>
-							<div class="descriptionarea">
-								<div class="titlearea">
-									<span class="jobtitle">
-										Solution Developer, Toronto Dominion Bank
-									</span>
-									<span class="time">
-										July, 2015
-									</span>
-								</div>
-								<div class="description">
-									<ul>
-										<li>I will be joining Toronto Dominion Bank as a solution developer in the up coming July in 2015</li>
-									</ul>
-								</div>
+						</div>
+						<div class="descriptionarea">
+							<div class="titlearea">
+								<span class="jobtitle">
+									Solution Developer, Toronto Dominion Bank
+								</span>
+								<span class="time">
+									July, 2015
+								</span>
 							</div>
-						</li>
-					</div>
-					<div class ="workplace introfade">
-						<li>
-							<div class="companyicon">
-								<div class="square">
-									<img src="images/IBM.jpg" class="icon">
-								</div>
+							<div class="description">
+								<ul>
+									<li>I will be joining Toronto Dominion Bank as a solution developer in the up coming July in 2015</li>
+								</ul>
 							</div>
-							<div class="descriptionarea">
-								<div class="titlearea">
-									<span class="jobtitle">
-										Software Engineer Intern, IBM 
-									</span>
-									<span class="time">
-										May,13 - Aug,14
-									</span>
-								</div>
-								<div class="description">
-									<ul>
-										<li>Increased usage rate of a JEE web application used to facilitate the creation of interim fixes by 40%
-											and created critical new application used to create work tasks for software developers when customers report new WebSphere defects ( Java, Javascript )
-										</li>
-									</ul>
-								</div>
+						</div>
+					</li>
+
+					<li class ="workplace introfade">
+						<div class="companyicon">
+							<div class="square">
+								<img src="images/IBM.jpg" class="icon">
 							</div>
-						</li>
-					</div>
-					<div class ="workplace introfade">
-						<li>
-							<div class="companyicon">
-								<div class="square">
-									<img src="images/SKULE.jpg" class="icon">
-								</div>
+						</div>
+						<div class="descriptionarea">
+							<div class="titlearea">
+								<span class="jobtitle">
+									Software Engineer Intern, IBM 
+								</span>
+								<span class="time">
+									May,13 - Aug,14
+								</span>
 							</div>
-							<div class="descriptionarea">
-								<div class="titlearea">
-									<span class="jobtitle">
-										Web Developer, Skule™ Labs
-									</span>
-									<span class="time">
-										Mar,14 - Jun,14
-									</span>
-								</div>
-								<div class="description">
-									<ul>
-										<li>Developed in a web platform designed to improve student life by harvesting university related information and services to a centralized site ( Ruby on Rails )</li>
-									</ul>
-								</div>
+							<div class="description">
+								<ul>
+									<li>Increased usage rate of a JEE web application used to facilitate the creation of interim fixes by 40%
+										and created critical new application used to create work tasks for software developers when customers report new WebSphere defects ( Java, Javascript )
+									</li>
+								</ul>
 							</div>
-						</li>
-					</div>
+						</div>
+					</li>
+
+					<li class ="workplace introfade">
+						<div class="companyicon">
+							<div class="square">
+								<img src="images/SKULE.jpg" class="icon">
+							</div>
+						</div>
+						<div class="descriptionarea">
+							<div class="titlearea">
+								<span class="jobtitle">
+									Web Developer, Skule™ Labs
+								</span>
+								<span class="time">
+									Mar,14 - Jun,14
+								</span>
+							</div>
+							<div class="description">
+								<ul>
+									<li>Developed in a web platform designed to improve student life by harvesting university related information and services to a centralized site ( Ruby on Rails )</li>
+								</ul>
+							</div>
+						</div>
+					</li>
+
+					<!--end exp list-->
 				</ul>
 			</div>
 		</div>
