remove particle on mobile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div id="particles-js">
 	</div>
 	<!-- first section with social media-->
-	<div class="content_container">
+	<div id="intro" class="content_container">
 		<div class="content">
 			<div class="name">Yuan Xue</div>
 			<p class="introduction">Computer Engineer</p>
