--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<meta name="robots" content="index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="css/index.css"/>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" type="text/css" href="css/animate.min.css"/>
+	<link rel="stylesheet" type="text/css" href="style/css/index.css"/>
+	<link rel="stylesheet" type="text/css" href="style/css/bootstrap.min.css"/>
+	<link rel="stylesheet" type="text/css" href="style/css/animate.min.css"/>
 	<link rel="stylesheet" type="text/css" href="js/vegas/jquery.vegas.css"/>
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
